# cosmic-python-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
doc/img/: allocation_components.drawio
src/allocation/: __init__.py  bootstrap.py  config.py  fast_app.py  flask_app.py  logger.py  model.py  models.py  orm.py  repository.py  services.py  views.py
src/allocation/adapters/: eventpublisher.py  orm.py  pulsar_eventpublisher.py  redis_eventpublisher.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: eventconsumer.py  fast_app.py  flask_app.py  pulsar_eventconsumer.py  redis_eventconsumer.py  redis_eventpublisher.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  random_refs.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py  test_services.py
tests/e2e/: api_client.py  pulsar_client.py  test_api.py  test_external_events.py
tests/integration/: test_email.py  test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_products.py  test_services.py
